--- a/Day01/dom_basics/index.html
+++ b/Day01/dom_basics/index.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script async defer src="script.js"></script>
+  <script async src="script.js"></script>
 </head>
 
 <body>
-  <h2>DOM and BOM</h2>
+  <h2>Todo List</h2>
+  <input id="newtask">
+  <button id="addtask">ADD</button>
+  <ul id="tasklist"></ul>
 
 </body>
 
