--- a/Day02/asynchronos/index.html
+++ b/Day02/asynchronos/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script async defer src="promises.js"></script>
+  <script async defer src="async_await.js"></script>
 </head>
 
 <body>
