--- a/Day03/vue_basics/index.html
+++ b/Day03/vue_basics/index.html
@@ -16,6 +16,8 @@
     <h1>{{title}}</h1>
     <button @click="titleUpperCase">UpperCase</button>
     <button @click="titleLowerCase">LowerCase</button>
+    <input v-model="username">
+    <p> Hello {{username}}</p>
   </div>
 
 </body>
